--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "advent-of-angr"
+name = "advent_of_angr"
 version = "0.1.0"
 description = ""
 authors = ["novafacing <novafacing@shemhazi>"]
@@ -16,6 +16,9 @@ archr = "^9.0.10689"
 capstone = "^4.0.2"
 keystone-engine = "^0.9.2"
 unicorn = "1.0.2rc4"
+ptpython = "^3.0.20"
+pygraphviz = "^1.7"
+networkx = "^2.6.3"
 
 [tool.poetry.dev-dependencies]
 black = "^21.11b"
@@ -84,5 +87,3 @@ strict_equality = true
 profile = "black"
 multi_line_output = 3
 use_parentheses = true
-
-
