--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ unicorn = "1.0.2rc4"
 ptpython = "^3.0.20"
 pygraphviz = "^1.7"
 networkx = "^2.6.3"
+objexplore = "^1.5.7"
 
 [tool.poetry.dev-dependencies]
 black = "^21.11b"
